--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,29 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 8px; /* Largura fina da scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Deixa o track da scrollbar transparente para um visual minimalista */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #a0a0a0; /* Cor sutil para o thumb da scrollbar */
+  border-radius: 4px; /* Bordas arredondadas para um look moderno */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #808080; /* Cor mais escura ao passar o mouse */
+}
+
+/* Para o Firefox */
+* {
+  scrollbar-width: thin; /* Define a scrollbar fina */
+  scrollbar-color: #a0a0a0 transparent; /* Cor do thumb e do track */
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
