--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,3 +109,13 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
+@keyframes growDown {
+  0% {
+      transform: scaleY(0);
+  }
+  100% {
+      transform: scaleY(1);
+  }
+}
